<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tables</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="title_activity_database_view">DatabaseView</string>
    <string name="title_activity_qryselect_view">qryselectView</string>
    <string name="qryselectView_newQuery">New Query</string>
    <string name="qryselectView_newRecord">New record</string>
    <string name="title_activity_record_view">RecordViewActivity</string>
    <string name="action_recordDelete">Delete record</string>
    <string name="action_deleteAll">Delete all</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_recordApplyChanges">Apply changes</string>
    <string name="title_activity_record_add">RecordAddActivity</string>
    <string name="title_activity_table_edit">tableEditActivity</string>
    <string name="action_confirm">OK</string>
    <string name="action_delete_file">OK</string>
    <string name="notnull">NotNull</string>
    <string name="PK">PrimaryKey</string>
    <string name="AI">AutoInc</string>
    <string name="unique">Unique</string>
    <string name="title_activity_preference">PreferenceActivity</string>
    <string name="pref_query_header">Query viewer options</string>
    <string name="pref_column_limit_preference_off">No limit (might affect readability)</string>
    <string name="pref_column_limit_preference">How many characters should each column show?</string>
    <string name="pref_query_limit_summary">Limiting the number of records shown improves performance</string>
    <string name="pref_query_limit_title">Query records limit</string>
    <string name="title_activity_temp_preference">TempPreferenceActivity</string>
    <string name="mainActivity_add_db_title">Add a database</string>
    <string name="mainActivity_add_db_message">Choose a database file using one of the methods listed below</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="mainActivity_add_db_insert_path">Insert the file path</string>
    <string name="mainActivity_forget_database">Are you sure you want to delete database</string>
    <string name="no">No</string>
    <string name="mainActivity_forget_all_dbs">Are you sure you want to forget all the databases?</string>
    <string name="mainActivity_file_chooser_title">Pick a file</string>
    <string name="mainActivity_wrong_file">The file you picked is not a valid SQLite database, please try again</string>
    <string name="mainActivity_add_db_create">Create a new empty database</string>
    <string name="mainActivity_add_db_path">Open an existing database from its path</string>
    <string name="mainActivity_add_db_chooser">Pick an existing database</string>
    <string name="DatabaseViewActivity_delete_table">Delete table</string>
    <string name="DatabaseViewActivity_view_pragma">View table structure</string>
    <string name="DatabaseViewActivity_rename_table">Rename table</string>
    <string name="DatabaseViewActivity_delete_table_message">Are you sure you want to delete the table </string>
    <string name="DatabaseViewActivity_info">Info</string>
    <string name="yes">Yes</string>
    <string name="DatabaseViewActivity_rename_table_message">Insert the new name</string>
    <string name="error">Error</string>
    <string name="DatabaseViewActivity_refresh_message">Tables might have changed, it is advised to refresh them</string>
    <string name="QuerySelectViewActivity_delete_message">Are you sure you want to delete this record?</string>
    <string name="QuerySelectViewActivity_error_delete_record_message">Can\'t delete record</string>
    <string name="QuerySelectViewActivity_insert_query_message">Insert the query</string>
    <string name="QuerySelectViewActivity_refresh_old_data_message">The data might have changed since it was loaded, it is advisable to reload it</string>
    <string name="QuerySelectViewActivity_loading_message">Loading data, please wait…</string>
    <string name="QuerySelectViewActivity_title_results">results</string>
    <string name="record">Record</string>
    <string name="RecordViewActivity_update_error_message">Error saving updates, please try again</string>
    <string name="RecordAddActivity_title">New record</string>
    <string name="RecordAddActivity_error_message">Can\'t add record, please try again</string>
    <string name="QuerySelectViewActivity_query_error_message">Query error</string>
    <string name="QuerySelectViewActivity_db_error_message">Cannot open database</string>
    <string name="title_activity_database_view_info">DatabaseViewInfoActivity</string>
    <string name="DatabaseViewActivity_error_opening_db">Cannot open database</string>
    <string name="DatabaseViewInfoActivity_filepath">File path</string>
    <string name="DatabaseViewInfoActivity_filesize">File size</string>
    <string name="DatabaseViewInfoActivity_tables">Tables</string>
    <string name="DatabaseViewInfoActivity_indexes">Indexes</string>
    <string name="DatabaseViewInfoActivity_hashcode">Hashcode</string>
    <string name="DatabaseViewInfoActivity_lastedit">Last edit</string>
    <string name="mainActivity_close_confirmation_message">Are you sure you want to close Tables?</string>
    <string name="mainActivity_close_confirmation_title">Quit Tables?</string>
    <string name="mainActivity_add_db_new">New</string>
    <string name="DatabaseViewInfoActivity_delete_title">Confirm</string>
    <string name="DatabaseViewInfoActivity_delete_message">Are you sure you want to delete this database? The operation will not be cancelable</string>
    <string name="DatabaseViewActivity_loading_message">Loading tables, please wait…</string>
    <string name="mainActivity_loading_message">Loading databases, please wait…</string>
    <string name="DatabaseViewActivity_refresh">Refresh</string>
    <string name="RowColumnSettings_type">Data type</string>
    <string name="RowColumnSettings_notnull">Not null</string>
    <string name="RowColumnSettings_name">Column Name</string>
    <string name="RowColumnSettings_name_hint">name</string>
    <string name="RowColumnSettings_autoinc">AutoInc</string>
    <string name="RowColumnSettings_primarykey">Primary Key</string>
    <string name="RowColumnSettings_unique">Unique</string>
    <string name="CreateTableActivity_table_name_hint">Write here the table name</string>
    <string name="RowColumnSettings_default_hint">default value</string>
    <string name="RowColumnSettings_default">Default value</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_select_view">SelectViewActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="DatabaseViewActivity_action_select_query">New select query</string>
    <string name="DatabaseViewActivity_action_query">New query</string>
    <string name="DatabaseViewActivity_new_query_message">Write here the SQLite command</string>
    <string name="DatabaseViewActivity_new_query_title">New query</string>
    <string name="DatabaseViewActivity_new_query_success">It appears the query executed correctly ! You might want to refresh the tables</string>
    <string name="DatabaseViewActivity_new_query_failure">Error!</string>
    <string name="DatabaseViewActivity_new_select_query_title">New select query</string>
    <string name="DatabaseViewActivity_new_select_query_message">Write here a query that returns data (e.g. SELECT)</string>
    <string name="CreateTableSettingsFragment_rowid_hint">Checked = with rowid</string>
    <string name="title_activity_table_create">TableCreateActivity</string>
    <string name="CreateTableActivity_next">Next </string>
    <string name="CreateTableActivity_previous">Previous</string>
    <string name="CreateTableActivity_add">Add</string>
    <string name="CreateTableActivity_confirm">Confirm</string>
    <string name="MainActivity_credits">Developed by Andrea Arduin using the following libraries</string>
    <string name="TableCreateActivity_confirm_message">Are you sure you want to create the table?</string>
    <string name="MainActivity_no_dbs_message">You haven\'t added any database yet, add one!</string>
    <string name="DatabaseViewInfoActivity_delete">Delete file</string>
    <string name="title_activity_query_view">QueryViewActivity</string>
    <string name="action_delete">delete</string>
    <string name="CreateTableActivity_error_no_columns">Can\'t create a table with no columns, please add one or more columns</string>
    <string name="CreateTableActivity_error_first_page_delete">Can\'t delete the first page!</string>
    <string name="CreateTableActivity_error_first_page">Already at the first page, can\'t go back any further</string>
</resources>
