<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="it.arduin.tables.ui.view.activity.DatabaseViewActivity">
    <item android:id="@+id/action_info" android:title="@string/DatabaseViewActivity_info" android:icon="@drawable/ic_action_info_outline"
    android:orderInCategory="100" app:showAsAction="ifRoom" />
    <item android:id="@+id/action_refresh" android:title="@string/DatabaseViewActivity_refresh" android:icon="@drawable/ic_action_refresh"
        android:orderInCategory="101" app:showAsAction="ifRoom" />
    <item android:id="@+id/action_select_query" android:title="@string/DatabaseViewActivity_action_select_query" android:icon="@drawable/ic_action_refresh"
        android:orderInCategory="102" app:showAsAction="never" />
    <item android:id="@+id/action_query" android:title="@string/DatabaseViewActivity_action_query" android:icon="@drawable/ic_action_refresh"
        android:orderInCategory="103" app:showAsAction="never" />
</menu>
